cargo_check_final_rbac_10.log
warning: /app/crates/auth-platform/Cargo.toml: file `/app/crates/auth-platform/src/lib.rs` found to be present in multiple build targets:
  * `lib` target `auth_platform`
  * `integration-test` target `lib`
    Checking auth-db v0.1.0 (/app/crates/auth-db)
    Checking auth-protocols v0.1.0 (/app/crates/auth-protocols)
    Checking auth-extension v0.1.0 (/app/crates/auth-extension)
    Checking auth-audit v0.1.0 (/app/crates/auth-audit)
    Checking auth-api v0.1.0 (/app/crates/auth-api)
    Checking auth-sso-platform v0.1.0 (/app)
error[E0432]: unresolved import `auth_db::repositories::role_repository`
  --> src/main.rs:16:5
   |
16 |     role_repository::RoleRepository,
   |     ^^^^^^^^^^^^^^^ could not find `role_repository` in `repositories`

warning: unused import: `std::collections::HashMap`
 --> src/bin/seed_rbac.rs:9:5
  |
9 | use std::collections::HashMap;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused imports: `AuthorizationService` and `RoleStore`
  --> src/bin/seed_rbac.rs:11:42
   |
11 | use auth_core::services::authorization::{AuthorizationService, RoleStore};
   |                                          ^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^

warning: unused variable: `role_repo`
  --> src/bin/seed_rbac.rs:33:9
   |
33 |     let role_repo = Arc::new(RoleRepository::new(pool.clone()));
   |         ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_role_repo`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0432`.
warning: `auth-sso-platform` (bin "seed_rbac") generated 3 warnings (run `cargo fix --bin "seed_rbac" -p auth-sso-platform` to apply 3 suggestions)
error: could not compile `auth-sso-platform` (bin "auth-sso-platform") due to 1 previous error
warning: build failed, waiting for other jobs to finish...
error[E0277]: the trait bound `RoleRepository: auth_core::services::role_service::RoleStore` is not satisfied
  --> src/bin/test_rbac.rs:33:41
   |
33 |     let role_service = RoleService::new(role_repo);
   |                                         ^^^^^^^^^ the trait `auth_core::services::role_service::RoleStore` is not implemented for `RoleRepository`
   |
   = note: required for the cast from `Arc<RoleRepository>` to `Arc<(dyn auth_core::services::role_service::RoleStore + 'static)>`

For more information about this error, try `rustc --explain E0277`.
error: could not compile `auth-sso-platform` (bin "test_rbac") due to 1 previous error
